Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/ro.json
+++ b/i18n/translations/ro.json
@@ -13,7 +13,7 @@
   "noMessageFound": "Nu am putut găsi mesajul pe care îl căutați.",
   "cannotMessageYourself": "Nu vă puteți trimite mesaje.",
   "loadingChatHistory": "Se încarcă istoricul chat-ului ...",
-  "productTrial": "{produs} Încercare",
+  "productTrial": "{product} Încercare",
   "continueTrial": "Continuați procesul",
   "enterDetails": "Introduceți detalii",
   "privateMessageHint": "(Conversație privată)",
@@ -48,8 +48,8 @@
   "_fileUploadStatus.comment": "Upload notification title",
   "fileTooBig": "Fișierul depășește limita de dimensiune de {limit} mb.",
   "keyESC": "ESC",
-  "hitKeyToCancelEditing": "Apăsați pe {tasta} pentru a anula editarea.",
-  "quoteFooter": "- [Mesaj] ({messageUrl}) de la [{autor}] ({pmPath})",
+  "hitKeyToCancelEditing": "Apăsați pe {key} pentru a anula editarea.",
+  "quoteFooter": "- [Mesaj] ({messageUrl}) de la [{author}] ({pmPath})",
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} tastează",
   "usersAndUserAreTyping": "{users} și {user} tastează",
@@ -99,7 +99,7 @@
   "addServiceIntegration": "Adăugați integrarea serviciului",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
   "welcomeToPm": "Conversație privată cu {partner}",
-  "pmIntro": "Aceasta este o conversație privată între dvs. și {partner}. {Br} Conversațiile private sunt accesibile numai celor doi.",
+  "pmIntro": "Aceasta este o conversație privată între dvs. și {partner}. {br} Conversațiile private sunt accesibile numai celor doi.",
   "deleteMessagesQuestion": "Ștergeți mesajul selectat?",
   "linkInClipboard": "Link de mesaj adăugat în clipboard",
   "close": "Închide",
@@ -112,7 +112,7 @@
   "description": "Descriere",
   "create": "Crea",
   "enter": "introduce",
-  "justInvited": "Felicitări! Tocmai ați invitat {user} {sumă, plural, = 0 {} unul {și încă un membru} altul {și {sumă} mai mulți membri}}.",
+  "justInvited": "Felicitări! Tocmai ați invitat {user} {amount, plural, = 0 {} one {și încă un membru} other {și {amount} mai mulți membri}}.",
   "sharedFiles": "Fișiere partajate",
   "pinnedMesages": "Mesaje fixate",
   "groupInfo": "Informații despre grup",
@@ -127,7 +127,7 @@
   "unsuportedBrowserIncomingCall": "Ne pare rău, conferința video nu este acceptată în acest browser",
   "replyWithMessage": "Răspundeți cu un mesaj",
   "unsupportedBrowserShort": "Din păcate, browserul pe care îl utilizați în acest moment nu acceptă videoconferința cu Grape Call.",
-  "pleaseUseDesktopApp": "Vă rugăm să utilizați în schimb {desktopApp} ({download}, dacă nu ați instalat-o încă). Alternativ, puteți utiliza Grape cu {browsere} pentru a vă bucura de experiența completă.",
+  "pleaseUseDesktopApp": "Vă rugăm să utilizați în schimb {desktopApp} ({download}, dacă nu ați instalat-o încă). Alternativ, puteți utiliza Grape cu {browsers} pentru a vă bucura de experiența completă.",
   "desktopApp": "aplicație desktop",
   "chromeOrFirefox": "Chrome sau Firefox",
   "download": "Descarca",
@@ -163,7 +163,7 @@
   "_skipIntro.comment": "Intro footer skip button",
   "buttonContinue": "Continua",
   "_buttonContinue.comment": "Intro button continue.",
-  "skipIfDone": "Deja facut? {ocolire}",
+  "skipIfDone": "Deja facut? {skip}",
   "_skipIfDone.comment": "Intro footer",
   "inviteGuest": "Invitați un invitat la acest grup",
   "emailAddresses": "Adrese de email",
@@ -331,9 +331,9 @@
   "labeledMessagesSidebarTitle": "Mesaje importante",
   "sidebarLabelInChannel": "în {channel}",
   "labeledMessagesNoContentTitle": "Aici se întâmplă magia.",
-  "labeledMessagesNoContentText1": "{produs} vă rezumă automat conversațiile, astfel încât să le puteți răsfoi și găsi în funcție de context - noi îl numim „inteligență amplificată”.",
+  "labeledMessagesNoContentText1": "{product} vă rezumă automat conversațiile, astfel încât să le puteți răsfoi și găsi în funcție de context - noi îl numim „inteligență amplificată”.",
   "labeledMessagesNoContentText2": "Scrieți câteva sarcini sau întrebări pentru a le vedea aici!",
-  "newImportantMessages": "{sumă} {sumă, plural, unul {mesaj important important} altul {mesaje importante noi}}",
+  "newImportantMessages": "{amount} {amount, plural, one {mesaj important important} other {mesaje importante noi}}",
   "trainingModeHintWithLink": "IA: Acest sistem este în modul de formare ({learnMoreLink})",
   "learnMoreLink": "Aflați mai multe",
   "_learnMoreLink.comment": "learn more link",
@@ -351,7 +351,7 @@
   "notificationSettingsTooltip": "Editați setările de notificare",
   "membersList": "Lista membrilor",
   "_membersList.comment": "Group Info Panel: link to members list of the current group",
-  "leaveChannel": "Părăsește {canal}",
+  "leaveChannel": "Părăsește {channel}",
   "_leaveChannel.comment": "Group Info Panel: leave group link",
   "members": "Membri",
   "sharedInGroup": "Distribuit în {channelName}",
@@ -381,5 +381,5 @@
   "openInDesktop": "Deschideți în Grape Desktop",
   "downloadGrape": "{download}, dacă nu l-ați instalat încă.",
   "downloadGrapeDesktop": "Descărcați Grape Desktop",
-  "altenativeBrowser": "Alternativ, puteți utiliza Grape cu {browsere} pentru a vă bucura de experiența completă."
+  "altenativeBrowser": "Alternativ, puteți utiliza Grape cu {browsers} pentru a vă bucura de experiența completă."
 }
