--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -3,7 +3,7 @@
   "enableNotificationsRequest": "Lütfen masaüstü bildirimlerini etkinleştirin",
   "notificationsExplanation": "Böylece ekip üyeleriniz size {product} üzerinden ulaşabilir.",
   "enableNotifications": "Bildirimleri etkinleştirin",
-  "connectionTrouble": "{Product} ürününe bağlanmada sorun yaşıyoruz.",
+  "connectionTrouble": "{product} ürününe bağlanmada sorun yaşıyoruz.",
   "tryToReconnect": "Yeniden bağlanmayı deneyeceğiz",
   "reconnectSeconds": "s veya yapabilirsin",
   "reconnectNow": "şimdi dene",
@@ -40,21 +40,21 @@
   "inviteToOrganization": "Kuruluşunuza yeni bir kişiyi davet edin",
   "dropFileToUpload": "Yüklemek için dosyanızı bırakın!",
   "_dropFileToUpload.comment": "Hint on the drop overlay screen.",
-  "dropFileToUploadMaxFileSize": "{Limit} mb boyutuna kadar hemen hemen her dosya türünü destekliyoruz.",
+  "dropFileToUploadMaxFileSize": "{limit} mb boyutuna kadar hemen hemen her dosya türünü destekliyoruz.",
   "_dropFileToUploadMaxFileSize.comment": "Hint on the drop overlay screen.",
-  "fileUploadTitle": "{Total} dosyadan {uploading} tanesi yükleniyor",
+  "fileUploadTitle": "{total}} dosyadan {uploading} tanesi yükleniyor",
   "_fileUploadTitle.comment": "Upload notification title",
   "fileUploadStatus": "Yükleme durumu",
   "_fileUploadStatus.comment": "Upload notification title",
   "fileTooBig": "Dosya, {limit} mb'lik boyut sınırını aşıyor.",
   "keyESC": "ESC",
   "hitKeyToCancelEditing": "Düzenlemeyi iptal etmek için {key} tuşuna basın.",
-  "quoteFooter": "- [Mesaj] ({messageUrl}), [{yazar}] tarafından ({pmPath})",
+  "quoteFooter": "- [Mesaj] ({messageUrl}), [{author}}] tarafından ({pmPath})",
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} yazıyor",
   "usersAndUserAreTyping": "{users} ve {user} yazıyor",
   "usersAreTyping": "{users} ve {othersAmount} {othersAmount, çoğul, biri {other} diğer {others}} yazıyor",
-  "imageWithDescription": "Görüntü açıklaması}]",
+  "imageWithDescription": "Görüntü [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Resim: [Açıklama Yok]",
   "_imageWithoutDescription.comment": "**Used when rendered inline image from markdown without description.**",
@@ -93,13 +93,13 @@
   "clickToTryAgain": "tekrar denemek için burayı tıklayın",
   "groupIsPublic": "Bu grup halka açıktır. Her üye katılabilir ve geçmişi okuyabilir.",
   "groupIsPrivate": "Bu grup özeldir. Bu grubu yalnızca davet edilen üyeler görebilir ve katılabilir.",
-  "welcomeToGroup": "{Group} grubuna hoş geldiniz",
+  "welcomeToGroup": "{group} grubuna hoş geldiniz",
   "inviteMoreToGroup": "Bu gruba daha fazla üye davet edin",
   "_inviteMoreToGroup.comment": "Group Info Panel: invite members to the group",
   "addServiceIntegration": "Hizmet entegrasyonu ekleyin",
   "_addServiceIntegration.comment": "Group Info Panel: link to add an integration to the current group",
-  "welcomeToPm": "{Partner} ile özel görüşme",
-  "pmIntro": "Bu, sizinle {partner} arasındaki özel bir görüşmedir. {Br} Özel görüşmelere yalnızca ikiniz erişebilir.",
+  "welcomeToPm": "{partner} ile özel görüşme",
+  "pmIntro": "Bu, sizinle {partner} arasındaki özel bir görüşmedir. {br} Özel görüşmelere yalnızca ikiniz erişebilir.",
   "deleteMessagesQuestion": "Seçili mesaj silinsin mi?",
   "linkInClipboard": "Panoya mesaj bağlantısı eklendi",
   "close": "Kapat",
@@ -117,7 +117,7 @@
   "pinnedMesages": "Sabitlenmiş Mesajlar",
   "groupInfo": "Grup Bilgisi",
   "userProfile": "Kullanıcı profili",
-  "communication": "{Product} evreniyle iletişim kuruluyor, bu biraz zaman alabilir",
+  "communication": "{product} evreniyle iletişim kuruluyor, bu biraz zaman alabilir",
   "wantToChat": "Sohbet etmek ister misin?",
   "noChannelsToChatIn": "Şu anda sohbet edebileceğiniz kişi veya grubunuz yok. Daha fazla eğlenmek için bir gruba katılın veya yeni bir sohbet başlatın.",
   "joinGroup": "Gruba katılmak",
@@ -127,7 +127,7 @@
   "unsuportedBrowserIncomingCall": "Üzgünüz, video konferans bu tarayıcıda desteklenmiyor",
   "replyWithMessage": "Mesajla yanıtlayın",
   "unsupportedBrowserShort": "Maalesef şu anda kullandığınız tarayıcı, Grape Call ile video konferansı desteklemiyor.",
-  "pleaseUseDesktopApp": "Lütfen bunun yerine {desktopApp} uygulamamızı kullanın (henüz yüklemediyseniz {download}). Alternatif olarak, tam bir deneyim yaşamak için Grape'i {tarayıcılar} ile kullanabilirsiniz.",
+  "pleaseUseDesktopApp": "Lütfen bunun yerine {desktopApp} uygulamamızı kullanın (henüz yüklemediyseniz {download}). Alternatif olarak, tam bir deneyim yaşamak için Grape'i {browsers} ile kullanabilirsiniz.",
   "desktopApp": "masaüstü uygulaması",
   "chromeOrFirefox": "Chrome veya Firefox",
   "download": "indir",
@@ -137,7 +137,7 @@
   "_introTextWelcome.comment": "Intro welcome text.",
   "introHlSearchBrowser": "Ekip verilerinizi bulun",
   "_introHlSearchBrowser.comment": "Intro SearchBrowser hl.",
-  "introTextSearchBrowser": "Hizmet entegrasyonlarında (Google Apps veya Exchange gibi) randevuları, dosyaları ve daha fazlasını arayın veya web'e (ör. GIF'ler) göz atın. Üzüm Aramayı açmak için düğmeyi tıklayın veya # tuşuna basın",
+  "introTextSearchBrowser": "Hizmet entegrasyonlarında (Google Apps veya Exchange gibi) randevuları, dosyaları ve daha fazlasını arayın veya web'e (ör. GIF'ler) göz atın. Grape Search açmak için düğmeyi tıklayın veya # tuşuna basın",
   "_introTextSearchBrowser.comment": "Intro SearchBrowser text.",
   "introHlManageGroups": "Grupları yönetin",
   "_introHlManageGroups.comment": "Intro data hl.",
@@ -157,13 +157,13 @@
   "_connectServicesLinkIntro.comment": "Link to the integrations admin within 'Well done' intro screen.",
   "introHlDone": "Aferin!",
   "_introHlDone.comment": "Intro data hl.",
-  "introTextDone": "{AddTeamMembersLink} ve {connectServicesLink} yapmayı unutmayın. Herhangi bir sorunuz varsa, bize yazmaktan çekinmeyin!",
+  "introTextDone": "{addTeamMembersLink} ve {connectServicesLink} yapmayı unutmayın. Herhangi bir sorunuz varsa, bize yazmaktan çekinmeyin!",
   "_introTextDone.comment": "Intro data text.",
   "skipIntro": "Eğiticiyi atla",
   "_skipIntro.comment": "Intro footer skip button",
   "buttonContinue": "Devam et",
   "_buttonContinue.comment": "Intro button continue.",
-  "skipIfDone": "Zaten bitti? {atla}",
+  "skipIfDone": "Zaten bitti? {skip}",
   "_skipIfDone.comment": "Intro footer",
   "inviteGuest": "Bu gruba bir misafir davet edin",
   "emailAddresses": "E-mail adresleri",
@@ -177,13 +177,13 @@
   "sendInvites": "Davet e-postaları gönder",
   "personalMessage": "Kişisel mesaj",
   "leaveGroupDialogTitle": "Özel Gruptan Ayrıl",
-  "leaveGroupDialogMessage": "{Group} özel grubundan ayrılmak istediğinizden emin misiniz? Tekrar davet edilmediğiniz sürece bu gruba {wontAbleToRejoin} katılacaksınız.",
+  "leaveGroupDialogMessage": "{group} özel grubundan ayrılmak istediğinizden emin misiniz? Tekrar davet edilmediğiniz sürece bu gruba {wontAbleToRejoin} katılacaksınız.",
   "wontAbleToRejoin": "yeniden katılamayacak",
   "leaveGroupDialogCancel": "İptal etmek",
   "leaveGroupDialogButton": "Özel gruptan ayrıl",
   "linkAttachmentRemoveDialogTitle": "Eki kaldır",
   "_linkAttachmentRemoveDialogTitle.comment": "Link attachment Remove Dialog: modal dialog title",
-  "linkAttachmentRemoveDialogByDomain": "{Domain} alanından tüm bağlantılar",
+  "linkAttachmentRemoveDialogByDomain": "{domain} alanından tüm bağlantılar",
   "_linkAttachmentRemoveDialogByDomain.comment": "Link attachment Remove Dialog: admin option to remove all the links from this domain",
   "linkAttachmentRemoveDialogLinkForOrg": "Yalnızca bağlantı {url}",
   "_linkAttachmentRemoveDialogLinkForOrg.comment": "Link attachment Remove Dialog: admin option to remove this link for the entire org",
@@ -197,7 +197,7 @@
   "_linkAttachmentRemoveDialogMessage.comment": "Link attachment Remove Dialog: ask user to confirm removal.",
   "loginHl": "Sohbete katılın!",
   "_loginHl.comment": "Embedded chat login view headline.",
-  "loginHint": "{Product} üzerindeki sohbete katılmak için lütfen giriş yapın.",
+  "loginHint": "{product} üzerindeki sohbete katılmak için lütfen giriş yapın.",
   "_loginHint.comment": "Embedded chat login view hint.",
   "loginSubmit": "Şimdi giriş yap",
   "_loginSubmit.comment": "Embedded chat login view submit button.",
@@ -213,7 +213,7 @@
   "_manageGroupsLinkJoined.comment": "Manage Groups Dialog: show \"Groups you belong to\" link",
   "manageGroupsCreateNew": "yeni konuşma",
   "_manageGroupsCreateNew.comment": "Manage Groups Dialog: create new conversation button",
-  "youCanUseMarkdown": "{Markdown} da kullanabilirsiniz",
+  "youCanUseMarkdown": "{markdown} da kullanabilirsiniz",
   "example": "Misal",
   "_example.comment": "Title",
   "result": "Sonuç",
@@ -239,7 +239,7 @@
   "markdownTipsPitch": "Bazı şık stillerle sohbet mesajlarınızı nasıl geliştirebilirsiniz?",
   "markdownTipsDialogTitle": "Markdown ipuçları",
   "deletedMember": "Üye silindi",
-  "dateSeparatorToday": "Bugünün tarihi}",
+  "dateSeparatorToday": "Bugünün {date}",
   "_dateSeparatorToday.comment": "Date separator used in history, search, mentions etc.",
   "dateSeparatorYesterday": "Dün, {date}",
   "_dateSeparatorYesterday.comment": "Date separator used in history, search, mentions etc.",
@@ -266,7 +266,7 @@
   "enterGroupName": "Grup adını girin",
   "private": "Özel",
   "public": "halka açık",
-  "notificationSettingsTitle": "{Group} içinde bildirim",
+  "notificationSettingsTitle": "{group} içinde bildirim",
   "_notificationSettingsTitle.comment": "Notification settings dialog.",
   "notificationSettingDefault": "Varsayılan Bildirim Ayarları",
   "_notificationSettingDefault.comment": "Notification setting name.",
@@ -281,7 +281,7 @@
   "notificationSettingSaved": "kaydedildi",
   "muteGroupTitle": "Bu Grubun Sesini Kapat",
   "muteAllNotifications": "Bu grup için tüm bildirimleri tüm cihazlarınızda engelleyin",
-  "muteAllNotificationsHint": "Bu grup, tüm cihazlarınızda tamamen sessize alınmıştır. {Channel} 'dan artık zil ve bip sesi gelmesin - ancak yine de yeni mesajlar olup olmadığını kontrol etmek için istediğiniz zaman geri gelebilirsiniz. Gruptan ayrılmak ve kenar çubuğunuzdan kaldırmak istiyorsanız, {ayrılmakButton}",
+  "muteAllNotificationsHint": "Bu grup, tüm cihazlarınızda tamamen sessize alınmıştır. {channel} 'dan artık zil ve bip sesi gelmesin - ancak yine de yeni mesajlar olup olmadığını kontrol etmek için istediğiniz zaman geri gelebilirsiniz. Gruptan ayrılmak ve kenar çubuğunuzdan kaldırmak istiyorsanız, {leaveButton}",
   "clickHere": "buraya Tıkla",
   "_clickHere.comment": "Link used inline in the middle of a sentence.",
   "desktopNotificationsTitle": "Masaüstü bildirimleri",
@@ -318,7 +318,7 @@
   "_groupDeleteDialogConfirmMessage.comment": "Group Delete Dialog: confirm (info) message",
   "groupDeleteDialogConfirmWarning": "Uyarı: Bu eylem geri alınamaz!",
   "_groupDeleteDialogConfirmWarning.comment": "Group Delete Dialog: confirm (warning) message",
-  "groupDeleteDialogTitle": "\"{GroupName}\" silinsin mi?",
+  "groupDeleteDialogTitle": "\"{groupName}\" silinsin mi?",
   "_groupDeleteDialogTitle.comment": "Group Delete Dialog: dialog title",
   "groupDeleteDialogProvideName": "Lütfen silmek istediğiniz grubun adını girin.",
   "_groupDeleteDialogProvideName.comment": "Group Delete Dialog: validation message",
@@ -333,7 +333,7 @@
   "labeledMessagesNoContentTitle": "Sihir yapılan yer burasıdır.",
   "labeledMessagesNoContentText1": "{product}, konuşmalarınızı otomatik olarak özetler, böylece onları bağlama göre tarayabilir ve bulabilirsiniz - biz buna \"güçlendirilmiş zeka\" diyoruz.",
   "labeledMessagesNoContentText2": "Burada görünmelerini görmek için birkaç Görev veya Soru yazın!",
-  "newImportantMessages": "{miktar} {miktar, çoğul, bir {yeni önemli mesaj} diğer {yeni önemli mesajlar}}",
+  "newImportantMessages": "{amount} {amount, plural, one {yeni önemli mesaj} other {yeni önemli mesajlar}}",
   "trainingModeHintWithLink": "IA: Bu sistem eğitim modunda ({learnMoreLink})",
   "learnMoreLink": "daha fazla bilgi edin",
   "_learnMoreLink.comment": "learn more link",
@@ -351,12 +351,12 @@
   "notificationSettingsTooltip": "Bildirim ayarlarını düzenleyin",
   "membersList": "Üye Listesi",
   "_membersList.comment": "Group Info Panel: link to members list of the current group",
-  "leaveChannel": "{Channel} kanalından ayrılın",
+  "leaveChannel": "{channel} kanalından ayrılın",
   "_leaveChannel.comment": "Group Info Panel: leave group link",
   "members": "Üyeler",
-  "sharedInGroup": "{ChannelName} içinde paylaşıldı",
+  "sharedInGroup": "{channelName} içinde paylaşıldı",
   "_sharedInGroup.comment": "*Describe sharedInGroup*, example: 'Shared in Office'",
-  "sharedInPm": "{ChannelName} ile paylaşıldı",
+  "sharedInPm": "{channelName} ile paylaşıldı",
   "_sharedInPm.comment": "*Describe sharedInPm*, example: Shared with Felix'",
   "noSharedFiles": "Paylaşılan dosya yok",
   "showGroupMentions": "Grup bahsetmelerini göster",
@@ -381,5 +381,5 @@
   "openInDesktop": "Grape Desktop'ta aç",
   "downloadGrape": "Henüz yüklemediyseniz, {download}.",
   "downloadGrapeDesktop": "Grape Desktop'ı indirin",
-  "altenativeBrowser": "Alternatif olarak, tam bir deneyim yaşamak için Grape'i {tarayıcılar} ile kullanabilirsiniz."
+  "altenativeBrowser": "Alternatif olarak, tam bir deneyim yaşamak için Grape'i {browsers} ile kullanabilirsiniz."
 }
