Language update from LingoHub 🤖
Project Name: Web Client
Project Link: https://translate.lingohub.com/ubergrape-gmbh/dashboard/web-client
User: Oleh Aloshkin

Easy language translations with LingoHub 🚀

--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -11,7 +11,7 @@
   "reconnectAlert": "¡Ha sido reconectado con éxito!",
   "noGroupFound": "No pudimos encontrar lo que buscaba, el grupo pudo haber sido borrado, renombrado o desplazado.",
   "noMessageFound": "No pudimos encontrar el mensaje que buscaba.",
-  "cannotMessageYourself": "No puedes enviarse un mensaje a sí mismo.",
+  "cannotMessageYourself": "No puede enviarse un mensaje a sí mismo.",
   "loadingChatHistory": "Cargando historial de chat..",
   "productTrial": "Evaluar {product}",
   "continueTrial": "Continuar la evaluación",
@@ -22,7 +22,7 @@
   "_groupInviteNotificationTitle.comment": "Browser notification group invite title.",
   "groupInviteNotificationContent": "{name} (Invitación de grupo)",
   "_groupInviteNotificationContent.comment": "Browser notification group invite content.",
-  "grapeCallPmInvitationContent": "le invita a una Grape Call..",
+  "grapeCallPmInvitationContent": "le invita a una Grape Call...",
   "_grapeCallPmInvitationContent.comment": "Browser notification for incoming pm Grape Call.",
   "grapeCallPmMissedContent": "lo ha llamado",
   "_grapeCallPmMissedContent.comment": "Browser notification for missed pm Grape Call.",
@@ -69,7 +69,7 @@
   "_joinVideoConference.comment": "Sidebar: link to join a video conference",
   "inAnotherCall": "Está en otra llamada",
   "inCall": "En una llamada",
-  "oneCallSameTime": "Sólo puede estar en una llamada al mismo tiempo.",
+  "oneCallSameTime": "Sólo puede participar a una llamada al mismo tiempo.",
   "userInAnotherCall": "{name} está en otra llamada en este momento.",
   "recalculateScrollPosition": "Recalculando la posición del desplazamiento...",
   "_recalculateScrollPosition.comment": "Message showing when the user resizes the browser window.",
