--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -1,23 +1,23 @@
 {
   "noEmojiFound": "No se encontró ningún emoji.",
-  "enterKeywordPlaceholder": "Introducir una palabra clave..",
+  "enterKeywordPlaceholder": "Introducir una palabra clave...",
   "enterMessagePlaceholder": "Escribir un mensaje..",
   "groupPostingLimitedPlaceholder": "El envío de mensajes a este grupo ha sido limitado.",
   "willNotifyGroup": "- notificar a todos los miembros de este grupo",
   "_willNotifyGroup.comment": "*Describe willNotifyGroup*: this string is describing action",
   "wontNotifyGroup": "- no notifica a los miembros del grupo",
   "_wontNotifyGroup.comment": "*Describe wontNotifyGroup*: this string is describing action",
-  "notInGroup": "no en el grupo",
+  "notInGroup": "no está en el grupo",
   "insertAction": "Insertar en el mensaje",
   "openAction": "Abrir",
   "noDetailForItem": "No hay información detallada para este elemento",
-  "searchInfo": "Busque en Wikipedia, YouTube, Giphy y {tools} haciendo clic en {plusIcon} o pulsando la tecla + del teclado",
+  "searchInfo": "Busque en Wikipedia, YouTube, Giphy y {tools} haciendo clic en {plusIcon} o pulsando + en el teclado",
   "yourBusinessTools": "sus herramientas de trabajo",
   "_yourBusinessTools.comment": "*Describe yourBusinessTools*: link used in sentence 'Search Wikipedia, Youtube, Giphy and {tools}'",
   "resultsAmountHint": "{amount} resultados",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "No hay resultados.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, uno {Result} otro {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
   "serviesHeadline": "seleccionar el servicio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "No se han encontrado servicios."
