Break down complicated text segments with plural forms into easier ones

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -53,7 +53,11 @@
   "_quoteFooter.comment": "Quoted message footer text.",
   "userIsTyping": "{user} is typing",
   "usersAndUserAreTyping": "{users} and {user} are typing",
-  "usersAreTyping": "{users} and {othersAmount} {othersAmount, plural, one {other} other {others}} are typing",
+  "usersAreTyping": "{usersAreTypingBeginning} {othersAmount, plural, one {{usersAreTypingOthersAmountOnePlural}} other {{usersAreTypingOthersAmountOtherPlural}}} {usersAreTypingEnding}",
+  "usersAreTypingUsersAndAmount": "{users} and {othersAmount}",
+  "usersAreTypingOthersAmountTyping": "are typing",
+  "usersAreTypingOthersAmountOnePlural": "other",
+  "usersAreTypingOthersAmountOtherPlural": "others",
   "imageWithDescription": "Image: [{description}]",
   "_imageWithDescription.comment": "**Used when rendered inline image from markdown with description.**",
   "imageWithoutDescription": "Image: [No Description]",
@@ -112,7 +116,10 @@
   "description": "Description",
   "create": "Create",
   "enter": "Enter",
-  "justInvited": "Congratulations! You just invited {user} {amount, plural, =0 {} one {and one more member} other {and {amount} more members}}.",
+  "justInvited": "{justInvitedBeginning} {amount, plural, =0 {} one {{amountOnePlural}} other {{amountOtherPlural}}}.",
+  "justInvitedCongratulations": "Congratulations! You just invited {user}",
+  "justInvitedAmountOnePlural": "and one more member",
+  "justInvitedAmountOtherPlural": "and {amount} more members",
   "sharedFiles": "Shared Files",
   "pinnedMesages": "Pinned Messages",
   "groupInfo": "Group Info",
@@ -333,7 +340,9 @@
   "labeledMessagesNoContentTitle": "This is where the magic happens.",
   "labeledMessagesNoContentText1": "{product} automatically summarizes your conversations, so you can browse and find them based on context - we call it “amplified intelligence”.",
   "labeledMessagesNoContentText2": "Write a few Tasks or Questions to see them appear here!",
-  "newImportantMessages": "{amount} {amount, plural, one {new important message} other {new important messages}}",
+  "newImportantMessages": "{amount} {amount, plural, one {{newImportantMessagesOne}} other {{newImportantMessagesOther}}}",
+  "newImportantMessagesOne": "new important message",
+  "newImportantMessagesOther": "new important messages",
   "trainingModeHintWithLink": "IA: This system is in training mode ({learnMoreLink})",
   "learnMoreLink": "learn more",
   "_learnMoreLink.comment": "learn more link",
