--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -20,5 +20,10 @@
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
   "serviesHeadline": "seleccionar el servicio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
-  "noServicesFound": "No se han encontrado servicios."
+  "noServicesFound": "No se han encontrado servicios.",
+  "emojiEmoticons": "emoticons",
+  "emojiNature": "nature",
+  "emojiObjects": "objects",
+  "emojiPlaces": "places",
+  "emojiOther": "other"
 }
