--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -20,5 +20,10 @@
   "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}",
   "serviesHeadline": "wybrana usługa",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
-  "noServicesFound": "Nie znaleziono żadnych usług."
+  "noServicesFound": "Nie znaleziono żadnych usług.",
+  "emojiEmoticons": "emoticons",
+  "emojiNature": "nature",
+  "emojiObjects": "objects",
+  "emojiPlaces": "places",
+  "emojiOther": "other"
 }
