Added resultsAmountResult and resultsAmountResults keys

--- a/i18n/translations/es.json
+++ b/i18n/translations/es.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} resultados",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "No hay resultados.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "seleccionar el servicio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "No se han encontrado servicios.",
