--- a/i18n/translations/it.json
+++ b/i18n/translations/it.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} risultati",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Nessun risultato.",
-  "amountResults": "{resultsAmount} {risultatiAmount, plurale, one {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "seleziona il servizio",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Nessun servizio trovato.",
