--- a/i18n/translations/ro.json
+++ b/i18n/translations/ro.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} rezultate",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Fara rezultate.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "selectați serviciul",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Nu s-au găsit servicii.",
