--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} результаты",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Нет результатов.",
-  "amountResults": "{resultsAmount} {resultsAmount, множественное число, один {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "избранная услуга",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Услуги не найдены.",
