--- a/i18n/translations/tr.json
+++ b/i18n/translations/tr.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} sonuçları",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Sonuç yok.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "hizmet seçin",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Hizmet bulunamadı.",
