--- a/i18n/translations/fr.json
+++ b/i18n/translations/fr.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} résultats",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Aucun résultat.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results} }",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "sélectionner un service",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Aucun service trouvé.",
