--- a/i18n/translations/pl.json
+++ b/i18n/translations/pl.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} wyniki",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Brak wyników.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "wybrana usługa",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Nie znaleziono żadnych usług.",
