--- a/i18n/translations/uk.json
+++ b/i18n/translations/uk.json
@@ -17,7 +17,9 @@
   "resultsAmountHint": "{amount} результатів",
   "_resultsAmountHint.comment": "Amount of results hin in the grape-search header.",
   "noResults": "Немає результатів.",
-  "amountResults": "{resultsAmount} {resultsAmount, plural, one {Result} other {Results}}",
+  "amountResults": "{resultsAmount} {resultsAmount, plural, one {{resultsAmountResult}} other {{resultsAmountResults}}}",
+  "resultsAmountResult": "Result",
+  "resultsAmountResults": "Results",
   "serviesHeadline": "виберіть послугу",
   "_serviesHeadline.comment": "**Headline in services list of grape-browser**",
   "noServicesFound": "Послуг не знайдено.",
